// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Block should render Default 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  display: grid;
  justify-items: center;
}

.emotion-2 {
  display: grid;
  gap: 16px;
  grid-template-columns: auto;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 1;
  max-height: 80lvh;
  object-fit: contain;
  justify-self: center;
}

<figure
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="An image description"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset=""
        title="An image title"
      />
      <figcaption>
        Image caption (Quelle: Reddit.com)
      </figcaption>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`Image Block should render WithClassName 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  display: grid;
  justify-items: center;
}

.emotion-2 {
  display: grid;
  gap: 16px;
  grid-template-columns: auto;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 1;
  max-height: 80lvh;
  object-fit: contain;
  justify-self: center;
}

<figure
    class="extra-classname emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="An image description"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset=""
        title="An image title"
      />
      <figcaption>
        Image caption (Quelle: Reddit.com)
      </figcaption>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`Image Block should render WithEmotion 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  display: grid;
  justify-items: center;
}

.emotion-2 {
  display: grid;
  gap: 16px;
  grid-template-columns: auto;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 1;
  max-height: 80lvh;
  object-fit: contain;
  justify-self: center;
}

<figure
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="An image description"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset=""
        title="An image title"
      />
      <figcaption>
        Image caption (Quelle: Reddit.com)
      </figcaption>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`Image Block should render WithLink 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  display: grid;
  justify-items: center;
}

.emotion-2 {
  display: grid;
  gap: 16px;
  grid-template-columns: auto;
}

.emotion-4 {
  margin: 0;
  font: inherit;
  color: #e91e63;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(233, 30, 99, 0.4);
}

.emotion-4:hover {
  text-decoration-color: inherit;
}

.emotion-5 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 1;
  max-height: 80lvh;
  object-fit: contain;
  justify-self: center;
}

<figure
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-4"
        href="https://example.com"
        target="_blank"
      >
        <img
          alt="An image description"
          class="emotion-5 emotion-6"
          loading="lazy"
          sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
          srcset=""
          title="An image title"
        />
      </a>
      <figcaption>
        Image caption (Quelle: Reddit.com)
      </figcaption>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`Image Block should render WithoutCaption 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  display: grid;
  justify-items: center;
}

.emotion-2 {
  display: grid;
  gap: 16px;
  grid-template-columns: auto;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 1;
  max-height: 80lvh;
  object-fit: contain;
  justify-self: center;
}

<figure
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="An image description"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset=""
        title="An image title"
      />
      <figcaption>
         (Quelle: Reddit.com)
      </figcaption>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`Image Block should render WithoutSource 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  display: grid;
  justify-items: center;
}

.emotion-2 {
  display: grid;
  gap: 16px;
  grid-template-columns: auto;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 1;
  max-height: 80lvh;
  object-fit: contain;
  justify-self: center;
}

<figure
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="An image description"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset=""
        title="An image title"
      />
      <figcaption>
        Image caption 
      </figcaption>
    </div>
  </figure>
</DocumentFragment>
`;
